change publish dir to docs to play nice with gh pages

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 languageCode: "en-us"
 title: "Isabella Noble"
+publishDir: "docs"
 params:
     name: "Isabella Noble"
     description: "CV, Portfolio and Blog"
