add greek islands

--- a/data/projects_lp/works/greek-islands-11.yaml
+++ b/data/projects_lp/works/greek-islands-11.yaml
@@ -3,5 +3,5 @@ date: March 2020
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/greek-islands-11
 category: Guidebooks
-description: Writer: Evia & the Sporades
+description: "Writer: Evia & the Sporades"
 img: greek-islands-11.png
