--- a/data/projects_lp/works/south-india-9.yaml
+++ b/data/projects_lp/works/south-india-9.yaml
@@ -3,5 +3,5 @@ date: Oct 2017
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/south-india-and-kerala-10
 category: Guidebooks
-description: Writer: Tamil Nadu & Chennai; Curator: Tamil Nadu & Chennai, Karnataka & Bengaluru, Goa, Kerala, Andaman Islands, Telangana & Andhra Pradesh
+description: "Writer: Tamil Nadu & Chennai; Curator: Tamil Nadu & Chennai, Karnataka & Bengaluru, Goa, Kerala, Andaman Islands, Telangana & Andhra Pradesh"
 img: south-india-9.jpg
