--- a/data/projects_lp/works/england-9.yaml
+++ b/data/projects_lp/works/england-9.yaml
@@ -3,5 +3,5 @@ date: Apr 2017
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/england-travel-guide-10
 category: Guidebooks
-description: Writer: Oxford, Cotswolds & Around
+description: "Writer: Oxford, Cotswolds & Around"
 img: england-9.jpg
