--- a/data/projects_lp/works/india-16.yaml
+++ b/data/projects_lp/works/india-16.yaml
@@ -3,5 +3,5 @@ date: Oct 2015
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/india-18
 category: Guidebooks
-description: Writer: Tamil Nadu & Chennai
+description: "Writer: Tamil Nadu & Chennai"
 img: india-16.jpg
