--- a/data/projects_lp/works/south-india-8.yaml
+++ b/data/projects_lp/works/south-india-8.yaml
@@ -3,5 +3,5 @@ date: Oct 2015
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/south-india-and-kerala-10
 category: Guidebooks
-description: Writer: Tamil Nadu & Chennai
+description: "Writer: Tamil Nadu & Chennai"
 img: south-india-8.jpg
