--- a/data/projects_lp/works/spain-10.yaml
+++ b/data/projects_lp/works/spain-10.yaml
@@ -3,5 +3,5 @@ date: Nov 2014
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/spain-travel-guide-12
 category: Guidebooks
-description: Writer: Cantabria & Asturias
+description: "Writer: Cantabria & Asturias"
 img: spain-10.jpg
