--- a/data/projects_lp/works/spain-11.yaml
+++ b/data/projects_lp/works/spain-11.yaml
@@ -3,5 +3,5 @@ date: Nov 2016
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/spain-travel-guide-12
 category: Guidebooks
-description: Writer: Andalucía, Extremadura, Cantabria & Asturias
+description: "Writer: Andalucía, Extremadura, Cantabria & Asturias"
 img: spain-11.jpg
