--- a/data/projects_lp/works/tib-10.yaml
+++ b/data/projects_lp/works/tib-10.yaml
@@ -3,5 +3,5 @@ date: Jul 2016
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/thailands-islands-beaches-11
 category: Guidebooks
-description: Writer: Phuket & the Andaman Coast
+description: "Writer: Phuket & the Andaman Coast"
 img: tib-10.gif
