--- a/data/projects_lp/works/andalucia-8.yaml
+++ b/data/projects_lp/works/andalucia-8.yaml
@@ -3,5 +3,5 @@ date: Jan 2016
 client: Lonely Planet
 clientLink: https://shop.lonelyplanet.com/products/andalucia-travel-guide-9
 category: Guidebooks
-description: Writer: Cádiz, Huelva & Sevilla Provinces, Gibraltar
+description: "Writer: Cádiz, Huelva & Sevilla Provinces, Gibraltar"
 img: andalucia-8.gif
