fix bio and gijon

--- a/data/projects_lp/works/gijon.yaml
+++ b/data/projects_lp/works/gijon.yaml
@@ -1,5 +1,5 @@
 title: Descubrir Xixón/Gijón
-img: LP GijonXixon 2018 (1).jpg
+img: gijon.jpg
 date: Feb 2018
 client: Lonely Planet
 clientLink: https://www.gijon.es/es/publicaciones/lonely-planet-descubrir-gijonxixon
