--- a/data/projects_lp/works.yaml
+++ b/data/projects_lp/works.yaml
@@ -29,7 +29,7 @@ books:
       clientLink: https://shop.lonelyplanet.com/products/the-vegan-travel-handbook-1
       category: Guidebooks
       description: Contributing Writer
-      img: vegan-travel-handbook-v2.jpg
+      img: vegan-travel-handbook.jpg
 
     - title: Best in Travel 2020
       date: Oct 2019
