--- a/data/projects_lp/works.yaml
+++ b/data/projects_lp/works.yaml
@@ -141,7 +141,7 @@ books:
       clientLink: https://shop.lonelyplanet.com/products/the-honeymoon-handbook-1
       category: Guidebooks
       description: Contributing Writer
-      img: honeymoon-handbook.jpg
+      img: hh.jpeg
 
     - title: Spain 11
       date: Nov 2016
