--- a/data/projects_lp/works.yaml
+++ b/data/projects_lp/works.yaml
@@ -149,7 +149,7 @@ books:
       clientLink: https://shop.lonelyplanet.com/products/spain-travel-guide-12
       category: Guidebooks
       description: "Writer: Andalucía, Extremadura, Cantabria & Asturias"
-      img: spain-11.jpg
+      img: spain11.jpeg
 
     - title: Pocket Phuket 4
       date: Jul 2016
