--- a/data/projects_lp/works.yaml
+++ b/data/projects_lp/works.yaml
@@ -36,7 +36,7 @@ books:
       client: Lonely Planet
       category: Guidebooks
       description: Contributing Writer
-      img: best-in-travel-2020.jpg
+      img: bit2020.jpg
       clientLink: https://shop.lonelyplanet.com/products/lonely-planets-best-in-travel-2020
 
     - img: india-18.jpg
