--- a/data/projects_lp/works.yaml
+++ b/data/projects_lp/works.yaml
@@ -189,7 +189,7 @@ books:
       clientLink: https://shop.lonelyplanet.com/products/andalucia-travel-guide-9
       category: Guidebooks
       description: "Writer: Cádiz, Huelva & Sevilla Provinces, Gibraltar"
-      img: andalucia-8.gif
+      img: and8.jpg
 
     - title: South India & Kerala 8
       date: Oct 2015
