--- a/data/projects_other/works.yaml
+++ b/data/projects_other/works.yaml
@@ -173,6 +173,13 @@ books:
       description: Writer
       img: do-as-spanish.png
       
+    - title: "Why I love Skiathos"
+      date: May 2019
+      client: Lonely Planet Magazine
+      category: Other Work
+      description: Writer
+      img: do-as-spanish.png
+      
     - title: "Oviedo: what to see and do in Spain's divine city of cider"
       date: May 2019
       client: Telegraph Travel
